--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
     "description": "GitHub Action for generating ECR credentials for Quant Cloud",
     "main": "dist/index.js",
     "scripts": {
-      "build": "tsc",
-      "test": "jest"
+        "build": "tsc",
+        "test": "jest"
     },
     "dependencies": {
-      "@actions/core": "^1.10.0",
-      "quant-ts-client": "github:quantcdn/quant-ts-client#v3"
+        "@actions/core": "^1.10.0",
+        "quant-ts-client": "github:quantcdn/quant-ts-client#v3"
     },
     "devDependencies": {
-      "@types/node": "^20.0.0",
-      "typescript": "^5.0.0"
+        "@types/node": "^20.0.0",
+        "@vercel/ncc": "^0.38.3",
+        "typescript": "^5.0.0"
     }
-  } 
+}
