--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
         run: npm ci
 
       - name: Build with ncc
-        run: ncc build src/index.ts
+        run: npx ncc build src/index.ts
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
