--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,14 @@ name: Test ECR Login
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
+    paths:
+      - 'src/**'
+      - '.github/workflows/test.yml'
+      - 'package.json'
+      - 'package-lock.json'
 
 jobs:
   test:
@@ -31,6 +39,7 @@ jobs:
       - name: Login to ECR
         uses: docker/login-action@v3
         with:
+          registry: ${{ steps.ecr-login.outputs.endpoint }}
           username: ${{ steps.ecr-login.outputs.username }}
           password: ${{ steps.ecr-login.outputs.password }}
 
