--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,8 +39,8 @@ jobs:
         id: ecr-login
         with:
           api_key: ${{ secrets.QUANT_API_KEY }}
-          organization: ${{ secrets.QUANT_ORG }}
-          base_url: ${{ secrets.QUANT_BASE_URL }}
+          organization: 'quant'
+          base_url: 'https://portal.stage.quantcdn.io/api/v3'
 
       - name: Debug Outputs
         run: |
